// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRoutes(routes) - adds routes to routesMap 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
    ],
    "hasSSR": undefined,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/",
    "payload": Object {},
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "pathname": "",
      "payload": Object {},
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "routesAdded": 2,
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "@@rudy/NOT_FOUND",
    "url": "/",
  },
  "title": "@@rudy/ADD_ROUTES",
}
`;

exports[`addRoutes(routes) - adds routes to routesMap 2`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
    ],
    "hasSSR": undefined,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/",
    "payload": Object {},
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "pathname": "",
      "payload": Object {},
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "routesAdded": 2,
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "@@rudy/NOT_FOUND",
    "url": "/",
  },
  "title": "@@rudy/ADD_ROUTES",
}
`;

exports[`setState 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/first",
      },
    ],
    "hasSSR": undefined,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "payload": Object {},
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "pathname": "",
      "payload": Object {},
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "type": "FIRST",
    "url": "/first",
  },
  "title": "@@rudy/SET_STATE",
}
`;
